--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,5 +1,13 @@
-<div class="accueil-container">
-    <h1>Bienvenue au Club de Boxe XYZ</h1>
+<app-header></app-header>
+
+<main>
+  <div class="accueil-container">
+    <h1>Bienvenue au Club de Boxe de Pecq!</h1>
     <p>Le meilleur endroit pour apprendre la boxe et améliorer votre condition physique!</p>
-    <img src="url-de-votre-image" alt="Club de Boxe XYZ" class="club-image">
+    <img src="assets/images/acceuil_boxe_1024x538.jpg" alt="Club de Boxe de Pecq!" class="club-image">
   </div>
+
+  <!-- <app-weather></app-weather> -->
+</main>
+
+<app-footer></app-footer>
