--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -7,7 +7,7 @@
     <img src="assets/images/acceuil_boxe_1024x538.jpg" alt="Club de Boxe de Pecq!" class="club-image">
   </div>
 
-  <!-- <app-weather></app-weather> -->
+  <app-weather></app-weather>
 </main>
 
 <app-footer></app-footer>
