--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,7 @@ header {
     background-color: #333; /* Couleur de fond */
     color: white; /* Couleur du texte */
     padding: 20px; /* Espacement intérieur */
+    margin-bottom: 10px;
   }
   
   nav ul {
