--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,8 @@
         <li><a routerLink="/">Accueil</a></li>
         <li><a routerLink="/about">À propos</a></li>
         <li><a routerLink="/contact">Contact</a></li>
+        <li><a routerLink="/weather-forecast">TestApi</a></li>
+        <li><a routerLink="/login">Se connecter</a></li>
       </ul>
     </nav>
 </header>
