--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
         <li><a routerLink="/about">À propos</a></li>
         <li><a routerLink="/contact">Contact</a></li>
         <li><a routerLink="/weather-forecast">TestApi</a></li>
+        <li><a routerLink="/members">Membres</a></li>
         <li><a routerLink="/login">Se connecter</a></li>
       </ul>
     </nav>
