add global color

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,13 @@
 <header>
-    <nav>
-      <ul>
-        <li><a routerLink="/">Accueil</a></li>
-        <li><a routerLink="/about">À propos</a></li>
-        <li><a routerLink="/contact">Contact</a></li>
-        <li><a routerLink="/weather-forecast">TestApi</a></li>
-        <li><a routerLink="/members">Membres</a></li>
-        <li><a routerLink="/login">Se connecter</a></li>
-      </ul>
-    </nav>
+  <h1>Club de Boxe de Pecq</h1>
+  <nav>
+    <ul>
+      <li><a routerLink="/">Accueil</a></li>
+      <li><a routerLink="/about">À propos</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+      <li><a routerLink="/weather-forecast">TestApi</a></li>
+      <li><a routerLink="/members">Membres</a></li>
+      <li><a routerLink="/login">Se connecter</a></li>
+    </ul>
+  </nav>
 </header>
