--- a/src/app/pages/members/members.component.html
+++ b/src/app/pages/members/members.component.html
@@ -1,16 +1,22 @@
-<h2>Liste des membres:</h2>
+<h2>Liste des membres :</h2>
 
 <button (click)="showAddMember()">Ajouter un membre</button>
 
 <div class="members-list">
   <div class="member-columns">
     <div>Nom</div>
+    <div>Prénom</div>
     <div>Âge</div>
+    <div>License</div>
+    <div>Solde</div>
     <div>Actions</div>
   </div>
   <div *ngFor="let member of members" class="member-details">
     <div>{{ member.name }}</div>
+    <div>{{ member.firstName }}</div>
     <div>{{ member.age }} ans</div>
+    <div>{{ member.license?.startDate ? (member.license!.startDate | date: 'dd/MM/yyyy') : 'Pas de license' }}</div>
+    <div>{{ member.balance }} €</div>
     <div class="button-group">
       <button (click)="editMember(member)">Modifier</button>
       <button (click)="deleteMember(member)">Supprimer</button>
