--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/button.scss';
+
 .login-container {
     max-width: 400px;
     margin: auto;
@@ -23,19 +25,6 @@
         border-radius: 4px;
       }
     }
-  
-    button {
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-  
-      &:hover {
-        background-color: #0056b3;
-      }
-    }
   }
   
+ 
