--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Club de Boxe de Pecq</h1>
+  <h1>Club de Boxe Pecq</h1>
   <nav>
     <ul>
       <li><a routerLink="/">Accueil</a></li>
