--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,8 +4,8 @@
     <p>Pour nous contacter, veuillez utiliser les informations ci-dessous :</p>
   
     <ul>
-      <li>Email: contact&#64;exemple.com</li>
-      <li>Téléphone: +XX XXX XXX XXX</li>
-      <li>Adresse: 123 Rue Exemple, Ville, Pays</li>
+      <li>Email: richardthebest1&#64;hotmail.be (Responsable et coach)</li>
+      <li>Téléphone: 0488/04 93 12</li>
+      <li>Adresse: Rue des Déportés, 10 | 7740 PECQ</li>
     </ul>
   </div>
