--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
     <h2>Connexion</h2>
   
-    <form>
+    <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Nom d'utilisateur</label>
         <input type="text" id="username" name="username" required>
@@ -15,4 +15,3 @@
       <button type="submit">Se connecter</button>
     </form>
   </div>
-  
