work on pop up when deleting member

--- a/src/app/pages/members/members.component.html
+++ b/src/app/pages/members/members.component.html
@@ -20,7 +20,7 @@
     <div class="button-group">
       <button (click)="showDetails(member)">Détails</button>
       <button (click)="editMember(member)">Modifier</button>
-      <button (click)="deleteMember(member)">Supprimer</button>
+      <button (click)="confirmDelete(member)">Supprimer</button>
     </div>
   </div>
 </div>
