--- a/src/app/pages/members/members.component.html
+++ b/src/app/pages/members/members.component.html
@@ -18,9 +18,19 @@
     <div>{{ member.license?.startDate ? (member.license!.startDate | date: 'dd/MM/yyyy') : 'Pas de license' }}</div>
     <div>{{ member.solde }} €</div>
     <div class="button-group">
-      <button (click)="showDetails(member)">Détails</button>
-      <button (click)="editMember(member)">Modifier</button>
-      <button (click)="confirmDelete(member)">Supprimer</button>
+    <!-- <button>- 3 €</button>
+    <button>+ 3 €</button>
+    <button>+ 10 €</button>
+    <button>+ 20 €</button> -->
+    <button (click)="showDetails(member)">Détails</button>
+    <button (click)="editMember(member)">Modifier</button>
+    <button (click)="confirmDelete(member)">Supprimer</button>
     </div>
   </div>
+
+  <!-- <div *ngIf="selectedMember" class="member-details-page">
+    <h2>Détails du membre</h2>
+    <p>Nom: {{ selectedMember.name }}</p>
+    <p>Âge: {{ selectedMember.age }}</p>
+  </div> -->
 </div>
